# utfrecord

./: .gitignore  Cargo.toml  README.md  dali_main.py  main.py  pyproject.toml
.github/workflows/: CI.yml
src/: example.rs  lib.rs  reader.rs
utfrecord/: async_reader.py  sync_reader.py  utils.py
