[package]
name = "utfrecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utfrecord"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
fastdata-tfrecord = { git = "https://github.com/SunDoge/fastdata.git", rev = "eb8b45d" }
kanal = "0.1.0-pre8"
dlpark = "0.2.1"
